// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`About component matches snapshot when in standalone mode 1`] = `
<div>
  <div
    class="MuiBox-root css-cfm5gl"
  >
    <h4
      class="MuiTypography-root MuiTypography-h4 css-10jnrrx-MuiTypography-root"
    >
      about.title
    </h4>
    <div
      class="MuiStack-root css-v2woy3-MuiStack-root"
    >
      <div
        class="MuiBox-root css-yd8sa2"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
        >
          about.madeBy
           
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1orsvah-MuiTypography-root-MuiLink-root"
            href="https://www.ursine.llc"
            rel="noopener noreferrer"
            target="_blank"
          >
            about.ursineSoftware
          </a>
          .
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
        >
          about.contactUs
           
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1orsvah-MuiTypography-root-MuiLink-root"
            href="mailto:contact@ursine.llc"
          >
            about.contactEmail
          </a>
          .
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
        >
          about.weatherDataProvidedBy
           
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1orsvah-MuiTypography-root-MuiLink-root"
            href="https://open-meteo.com/"
            rel="noopener noreferrer"
            target="_blank"
          >
            about.openMeteo
          </a>
          .
        </p>
      </div>
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-1j74uew-MuiPaper-root-MuiCard-root"
        style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
      >
        <div
          class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-h6 css-1hd3wng-MuiTypography-root"
          >
            about.shareTitle
          </h6>
          <img
            alt="about.shareQrAlt"
            class="MuiBox-root css-1uipide"
            src="/assets/minman-v2-qr.png"
          />
        </div>
      </div>
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-1j74uew-MuiPaper-root-MuiCard-root"
        style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
      >
        <div
          class="MuiCardHeader-root css-ubxeev-MuiCardHeader-root"
        >
          <div
            class="MuiCardHeader-avatar css-1r9wl67-MuiCardHeader-avatar"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-16acvrp-MuiSvgIcon-root"
              data-testid="ExpandMoreIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </div>
          <div
            class="MuiCardHeader-content css-1jkp9bu-MuiCardHeader-content"
          >
            <span
              class="MuiTypography-root MuiTypography-body2 MuiCardHeader-title css-7ctihp-MuiTypography-root"
            >
              about.diagnosticsTitle
            </span>
          </div>
        </div>
        <div
          class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-cwrbtg-MuiCollapse-root"
          style="min-height: 0px;"
        >
          <div
            class="MuiCollapse-wrapper MuiCollapse-vertical css-1x6hinx-MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner MuiCollapse-vertical css-1i4ywhz-MuiCollapse-wrapperInner"
            >
              <div
                class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
              >
                <table
                  class="MuiTable-root css-1dwe2ef-MuiTable-root"
                >
                  <tbody
                    class="MuiTableBody-root css-gmh7jj-MuiTableBody-root"
                  >
                    <tr
                      class="MuiTableRow-root css-1xtozoh-MuiTableRow-root"
                    >
                      <td
                        class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-13fv10z-MuiTableCell-root"
                      >
                        about.diagnosticVersion
                      </td>
                      <td
                        class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1dc80h3-MuiTableCell-root"
                      >
                        v
                        0.0.0-test
                         (
                        )
                      </td>
                    </tr>
                    <tr
                      class="MuiTableRow-root css-1xtozoh-MuiTableRow-root"
                    >
                      <td
                        class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-qq3g53-MuiTableCell-root"
                      >
                        about.diagnosticNetwork
                      </td>
                      <td
                        class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1dc80h3-MuiTableCell-root"
                      >
                        about.diagnosticNetworkConnected
                      </td>
                    </tr>
                    <tr
                      class="MuiTableRow-root css-1xtozoh-MuiTableRow-root"
                    >
                      <td
                        class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-qq3g53-MuiTableCell-root"
                      >
                        about.diagnosticMode
                      </td>
                      <td
                        class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1dc80h3-MuiTableCell-root"
                      >
                        about.diagnosticModeStandalone
                      </td>
                    </tr>
                    <tr
                      class="MuiTableRow-root css-1xtozoh-MuiTableRow-root"
                    >
                      <td
                        class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-qq3g53-MuiTableCell-root"
                      >
                        about.diagnosticPlatform
                      </td>
                      <td
                        class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1dc80h3-MuiTableCell-root"
                      />
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`About component matches snapshot when not standalone 1`] = `
<div>
  <div
    class="MuiBox-root css-cfm5gl"
  >
    <h4
      class="MuiTypography-root MuiTypography-h4 css-10jnrrx-MuiTypography-root"
    >
      about.title
    </h4>
    <div
      class="MuiStack-root css-v2woy3-MuiStack-root"
    >
      <div
        class="MuiBox-root css-yd8sa2"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
        >
          about.madeBy
           
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1orsvah-MuiTypography-root-MuiLink-root"
            href="https://www.ursine.llc"
            rel="noopener noreferrer"
            target="_blank"
          >
            about.ursineSoftware
          </a>
          .
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
        >
          about.contactUs
           
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1orsvah-MuiTypography-root-MuiLink-root"
            href="mailto:contact@ursine.llc"
          >
            about.contactEmail
          </a>
          .
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
        >
          about.weatherDataProvidedBy
           
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1orsvah-MuiTypography-root-MuiLink-root"
            href="https://open-meteo.com/"
            rel="noopener noreferrer"
            target="_blank"
          >
            about.openMeteo
          </a>
          .
        </p>
      </div>
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-1j74uew-MuiPaper-root-MuiCard-root"
        style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
      >
        <div
          class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-h6 css-1hd3wng-MuiTypography-root"
          >
            about.shareTitle
          </h6>
          <img
            alt="about.shareQrAlt"
            class="MuiBox-root css-1uipide"
            src="/assets/minman-v2-qr.png"
          />
        </div>
      </div>
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-1j74uew-MuiPaper-root-MuiCard-root"
        style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
      >
        <div
          class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
        >
          <h6
            class="MuiTypography-root MuiTypography-h6 css-18xxwmt-MuiTypography-root"
          >
            about.installPWATitle
          </h6>
          <p
            class="MuiTypography-root MuiTypography-body2 css-956xpl-MuiTypography-root"
          >
            about.installPWADescription
          </p>
          <div
            class="MuiStack-root css-1pxjrel-MuiStack-root"
          >
            <p
              class="MuiTypography-root MuiTypography-body2 css-1a40gj6-MuiTypography-root"
            >
              about.installation
            </p>
            <p
              class="MuiTypography-root MuiTypography-body2 css-7ctihp-MuiTypography-root"
            >
              <span
                class="MuiBox-root css-1vg6q84"
              >
                about.android
                :
              </span>
               
              about.installAndroid
            </p>
            <p
              class="MuiTypography-root MuiTypography-body2 css-7ctihp-MuiTypography-root"
            >
              <span
                class="MuiBox-root css-1vg6q84"
              >
                about.ios
                :
              </span>
               
              about.installIos
            </p>
          </div>
        </div>
      </div>
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-1j74uew-MuiPaper-root-MuiCard-root"
        style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
      >
        <div
          class="MuiCardHeader-root css-ubxeev-MuiCardHeader-root"
        >
          <div
            class="MuiCardHeader-avatar css-1r9wl67-MuiCardHeader-avatar"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-16acvrp-MuiSvgIcon-root"
              data-testid="ExpandMoreIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </div>
          <div
            class="MuiCardHeader-content css-1jkp9bu-MuiCardHeader-content"
          >
            <span
              class="MuiTypography-root MuiTypography-body2 MuiCardHeader-title css-7ctihp-MuiTypography-root"
            >
              about.diagnosticsTitle
            </span>
          </div>
        </div>
        <div
          class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-cwrbtg-MuiCollapse-root"
          style="min-height: 0px;"
        >
          <div
            class="MuiCollapse-wrapper MuiCollapse-vertical css-1x6hinx-MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner MuiCollapse-vertical css-1i4ywhz-MuiCollapse-wrapperInner"
            >
              <div
                class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
              >
                <table
                  class="MuiTable-root css-1dwe2ef-MuiTable-root"
                >
                  <tbody
                    class="MuiTableBody-root css-gmh7jj-MuiTableBody-root"
                  >
                    <tr
                      class="MuiTableRow-root css-1xtozoh-MuiTableRow-root"
                    >
                      <td
                        class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-13fv10z-MuiTableCell-root"
                      >
                        about.diagnosticVersion
                      </td>
                      <td
                        class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1dc80h3-MuiTableCell-root"
                      >
                        v
                        0.0.0-test
                         (
                        )
                      </td>
                    </tr>
                    <tr
                      class="MuiTableRow-root css-1xtozoh-MuiTableRow-root"
                    >
                      <td
                        class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-qq3g53-MuiTableCell-root"
                      >
                        about.diagnosticNetwork
                      </td>
                      <td
                        class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1dc80h3-MuiTableCell-root"
                      >
                        about.diagnosticNetworkConnected
                      </td>
                    </tr>
                    <tr
                      class="MuiTableRow-root css-1xtozoh-MuiTableRow-root"
                    >
                      <td
                        class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-qq3g53-MuiTableCell-root"
                      >
                        about.diagnosticMode
                      </td>
                      <td
                        class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1dc80h3-MuiTableCell-root"
                      >
                        about.diagnosticModeWeb
                      </td>
                    </tr>
                    <tr
                      class="MuiTableRow-root css-1xtozoh-MuiTableRow-root"
                    >
                      <td
                        class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-qq3g53-MuiTableCell-root"
                      >
                        about.diagnosticPlatform
                      </td>
                      <td
                        class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-1dc80h3-MuiTableCell-root"
                      />
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
